# InternProject

./: .env_example  pyproject.toml
data/: filtered_base_returns.parquet  stETH_ETH_remove_lp.parquet  token_equilibrium_prices.parquet  weighted_price_returns.parquet
data/daily_snapshots/: 0x1E19CF2D73a72Ef1332C882F20534B6519Be0276_apr_df.csv  0x32296969Ef14EB0c6d29669C550D4a0449130230_apr_df.csv  0x447Ddd4960d9fdBF6af9a790560d0AF76795CB08_apr_df.csv  0x4EdcB2B46377530Bc18BB4D2c7Fe46a992c73e10_apr_df.csv  0x5aEe1e99fE86960377DE9f88689616916D5DcaBe_apr_df.csv  0x8e85e97ed19C0fa13B2549309965291fbbc0048b_apr_df.csv  0x9c6d47Ff73e0F5E51BE5FD53236e3F595C5793F2_apr_df.csv  0xB08885e6026bab4333A80024Ec25a1a3e1FF2b8A_apr_df.csv  0xDC24316b9AE028F1497c275EB9192a3Ea0f67022_apr_df.csv  0xa1F8A6807c402E4A15ef4EBa36528A3FED24E577_apr_df.csv  look closer at fee apr.ipynb
data/raw_pool_data/balancer_rETH_wETH/: aura_reward_df.parquet  bal_reward_df.parquet  pool_df.parquet
data/raw_pool_data/balancer_rETH_wETH_config_2/: aura_reward_df.parquet  bal_reward_df.parquet  pool_df.parquet
data/raw_pool_data/balancer_wstETH_cbETH/: aura_reward_df.parquet  (+2 more)
internproject/: balancer_config_addresses.py  constants.py  curve_config_addresses.py  demo.ipynb  frxETH_ETH.ipynb  functions.py  intern_graphs.ipynb  look_at_add_and_withdrawl_lp.ipynb  main.py  rETH_wETH.ipynb  rETH_wETH_config_2.ipynb  rETH_wstETH.ipynb  stETH_ETH.ipynb  testing.ipynb  whale_analysis.ipynb  wstETH_cbETH.ipynb  wstETH_cbETH_2.ipynb  wstETH_sfrxETH_rETH.ipynb  wstETH_sfrxETH_rETH_2.ipynb  wstETH_wETH.ipynb
(+24 files in other folders)
